# portal-inmobiliario-scraper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
configs/: defaults.yaml  search_urls.txt  selectors.yaml
scripts/: install_daily_terrenos_cron.sh  run_daily.sh  run_daily_terrenos.sh  setup_gmail_email.sh
src/: __init__.py  browser.py  cli.py  config.py  database.py  dedupe.py  discovery.py  exporters.py  logging_config.py  models.py  normalization.py  scheduler.py  utils.py  web.py
src/parsers/: __init__.py  detail_parser.py  search_parser.py  structured_data_parser.py
src/pipelines/: enrich.py  scrape_details.py  scrape_search.py
src/repositories/: listing_repository.py
src/services/: __init__.py  portal_inmobiliario.py
tests/: conftest.py  test_dedupe.py  test_detail_parser.py  test_normalization.py  test_search_parser.py
tests/fixtures/: detail_page.html  search_page.html
ui/: index.html
